# ros_project

./: README.md  requirements.txt  system.md
ros2_ws/src/lab_assistant_robot/: package.xml  setup.cfg  setup.py
ros2_ws/src/lab_assistant_robot/config/: lab_rules.yaml
ros2_ws/src/lab_assistant_robot/lab_assistant_robot/: auth_node.py  battery_node.py  dispense_node.py  emergency_node.py  inventory_node.py  messages.py  mock_ui_node.py  navigation_node.py  retrieval_node.py  state_machine_node.py  surveillance_node.py  touchscreen_ui_node.py
ros2_ws/src/lab_assistant_robot/launch/: system_bringup.launch.py  vscode_touchscreen_test.launch.py
ros2_ws/src/lab_assistant_robot/maps/: lab_map.yaml
scripts/: provision_pi_vm.sh
